Fixing bugs with icons on safari

--- a/styles/blocks/_burger-button.scss
+++ b/styles/blocks/_burger-button.scss
@@ -16,6 +16,6 @@
         height: 2px;
         background-color: var(--color-dark-bg);
         border-radius: 5px;
-        box-shadow: 0 -8px, 0 8px;
+        box-shadow: 0 -8px, 0 8px var(--color-dark-bg);
     }
 }
