--- a/styles/styles.css
+++ b/styles/styles.css
@@ -288,7 +288,7 @@ h4, .h4 {
   height: 2px;
   background-color: var(--color-dark-bg);
   border-radius: 5px;
-  box-shadow: 0 -8px, 0 8px;
+  box-shadow: 0 -8px, 0 8px var(--color-dark-bg);
 }
 
 .field {
@@ -460,6 +460,7 @@ h4, .h4 {
   border: none;
   width: 48px;
   aspect-ratio: 1;
+  outline: none;
   position: relative;
 }
 @media (hover: hover) {
